Fix incorrect function name.
The function was named ReadImageInformation() and not MetaDataRead()
as we initially thought to call it.

--- a/python/04_basic_registration.ipynb
+++ b/python/04_basic_registration.ipynb
@@ -476,10 +476,10 @@
     "# New 1.1 interface\n",
     "#reader = sitk.ImageFileReader()\n",
     "#reader.SetFileName(fixed_series_filenames[0])\n",
-    "#reader.MetaDataRead()\n",
+    "#reader.ReadImageInformation()\n",
     "#print('Patient name: ' + reader.GetMetaData('0010|0010') + ', Patient position:' + reader.GetMetaData('0018|5100'))\n",
     "#reader.SetFileName(moving_series_filenames[0])\n",
-    "#reader.MetaDataRead()\n",
+    "#reader.ReadImageInformation()\n",
     "#print('Patient name: ' + reader.GetMetaData('0010|0010') + ', Patient position:' + reader.GetMetaData('0018|5100'))"
    ]
   },
