--- a/r/04_basic_registration.ipynb
+++ b/r/04_basic_registration.ipynb
@@ -499,10 +499,10 @@
     "# New 1.1 interface\n",
     "#reader <- ImageFileReader()\n",
     "#reader$SetFileName(fixed_series_filenames[[1]])\n",
-    "#reader$MetaDataRead()\n",
+    "#reader$ReadImageInformation()\n",
     "#cat(\"Patient name: \", reader$GetMetaData('0010|0010'), ', Patient position:', reader$GetMetaData('0018|5100'), \"\\n\")\n",
     "#reader$SetFileName(moving_series_filenames[[1]])\n",
-    "#reader$MetaDataRead()\n",
+    "#reader$ReadImageInformation()\n",
     "#cat(\"Patient name: \", reader$GetMetaData('0010|0010'), ', Patient position:', reader$GetMetaData('0018|5100'), \"\\n\")"
    ]
   },
