--- a/python/04_basic_registration.ipynb
+++ b/python/04_basic_registration.ipynb
@@ -120,16 +120,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import SimpleITK as sitk\n",
     "from downloaddata import fetch_data as fdata\n",
+    "%matplotlib nbagg\n",
     "import gui\n",
     "import registration_gui as rgui\n",
-    "%matplotlib notebook\n",
     "\n",
     "import numpy as np\n",
     "import os\n",
@@ -284,9 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "moving_resampled = sitk.Resample(moving_image, fixed_image, final_transform, sitk.sitkLinear, 0.0, moving_image.GetPixelID())\n",
@@ -632,7 +628,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
