--- a/python/05_advanced_registration.ipynb
+++ b/python/05_advanced_registration.ipynb
@@ -547,13 +547,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "<a href=\"06_segmentation_and_shape_analysis.ipynb\"><h2 align=right>Next &raquo;</h2></a>"
+   ]
   }
  ],
  "metadata": {
@@ -572,7 +572,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
